# container-geometry-analyzer

./: # Container Geometry Analyzer.md  .gitignore  .pre-commit-config.yaml  AGGRESSIVE_SMOOTHING_FOR_REAL_CONTAINERS.md  CHANGES_v3_11_9.md  CLAUDE.md  CODEBASE_EXPLORATION_SUMMARY.md  COMPOSITE_INVESTIGATION_FINAL_SUMMARY.md  COMPOSITE_SHAPE_INVESTIGATION.md  COMPREHENSIVE_ASSESSMENT_REPORT.md  DIAMETER_SPECIFIC_TUNING_REPORT.md  EDGE_CASES_ANALYSIS.md  EXPLORATION_DOCUMENTATION_INDEX.md  EXTREMELY_AGGRESSIVE_SMOOTHING.md  Extracted Container Dimensions.md  FINAL_SUMMARY.txt  HXX_SUMMARY.md  IFU_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_IMPLEMENTED.md  KEY_FILES_REFERENCE.md  PHASE3_ANALYSIS_SUMMARY.txt  PHASE3_TIER1_IMPLEMENTATION.md  PHASE_2_QUICK_START.md  PRIORITY_1_COMPLETION_REPORT.md  PRIORITY_1_IMPLEMENTATION_PLAN.md  PRIORITY_1_QUICK_REFERENCE.md  PRIORITY_1_README.md  PRIORITY_1_SUMMARY.md  PRIORITY_1_VISUAL_GUIDE.md  PRIORITY_2_IMPLEMENTATION_PLAN.md  PRIORITY_2_INTEGRATION_RESULTS.md  PRIORITY_2_QUICK_REFERENCE.md  PRIORITY_2_STATUS_REPORT.md  PRIORITY_2_THRESHOLD_TUNING_REPORT.md  PRIORITY_4_ARCHITECTURAL_REDESIGN_PLAN.md  PRIORITY_4_PHASE_1_COMPLETION_REPORT.md  PRIORITY_4_PHASE_2_PLAN.md  PRIORITY_4_PHASE_2_TESTING_REPORT.md  PROJECT_STATUS_COMPLETE.md  (+38 more)
data/: centrifuge_tube_simulation_with_error_025_1percent.csv  centrifuge_tube_volume_height.csv  sample_2ml_tube_geometry_corrected.csv  simulated_container_eppi_50uL.csv
doc/: ALGORITHM_ANALYSIS_COMPREHENSIVE.md  ALGORITHM_OPTIMIZATION_PROGRESS.md  CONTRIBUTING.md  DIRECTX_FORMAT_DOCUMENTATION.md  EXPORT_FORMATS_SUMMARY.md  FINAL_OPTIMIZATION_SUMMARY.md  HXX_FORMAT_DOCUMENTATION.md  IFU.md  IFU_UPDATE_GUIDE.md  IMPLEMENTATION_RESULTS.md  INDEX.md  SPHERE_CAP_DETECTION_ANALYSIS.md  TEST_RESULTS_ANALYSIS.md  TEST_RESULTS_SUMMARY.md  TEST_SUITE_DOCUMENTATION.md  TRANSITION_DETECTION_ANALYSIS.md  data_generation_report.md
eval/: EVALUATION_REPORT.md  README.md
src/: container_geometry_analyzer_gui_v3_11_8.py  stability_detection.py
test_data/: composite_centrifuge_cone_cylinder.csv  cone_centrifuge_tip.csv  cylinder_fine_sampling.csv  cylinder_small_5mm.csv  cylinder_sparse_sampling.csv  frustum_expanding_beaker.csv
test_data_comprehensive/: composite3_cone-cylinder-frustum_10mm_2pct_error.csv  composite3_cone-cylinder-frustum_10mm_ideal.csv  composite3_cone-cylinder-frustum_8mm_2pct_error.csv  composite3_cone-cylinder-frustum_8mm_ideal.csv  composite3_sphere_cap-cylinder-cone_10mm_2pct_error.csv  composite3_sphere_cap-cylinder-cone_10mm_ideal.csv  composite3_sphere_cap-cylinder-cone_8mm_2pct_error.csv  composite3_sphere_cap-cylinder-cone_8mm_ideal.csv  composite_cone-cylinder_10mm_2pct_error.csv  composite_cone-cylinder_10mm_ideal.csv  composite_cone-cylinder_15mm_2pct_error.csv  composite_cone-cylinder_15mm_ideal.csv  composite_cone-cylinder_5mm_2pct_error.csv  composite_cone-cylinder_5mm_ideal.csv  composite_cone-frustum_10mm_2pct_error.csv  composite_cone-frustum_10mm_ideal.csv  composite_cone-frustum_15mm_2pct_error.csv  composite_cone-frustum_15mm_ideal.csv  composite_cone-frustum_5mm_2pct_error.csv  composite_cone-frustum_5mm_ideal.csv  composite_frustum-cylinder_10mm_2pct_error.csv  composite_frustum-cylinder_10mm_ideal.csv  composite_frustum-cylinder_15mm_2pct_error.csv  composite_frustum-cylinder_15mm_ideal.csv  composite_frustum-cylinder_5mm_2pct_error.csv  composite_frustum-cylinder_5mm_ideal.csv  composite_sphere_cap-cylinder_10mm_2pct_error.csv  composite_sphere_cap-cylinder_10mm_ideal.csv  composite_sphere_cap-cylinder_15mm_2pct_error.csv  composite_sphere_cap-cylinder_15mm_ideal.csv  composite_sphere_cap-cylinder_5mm_2pct_error.csv  composite_sphere_cap-cylinder_5mm_ideal.csv  comprehensive_metadata.json  cone_10mm_2pct_error.csv  cone_10mm_ideal.csv  cone_15mm_2pct_error.csv  cone_15mm_ideal.csv  cone_5mm_2pct_error.csv  cone_5mm_ideal.csv  cylinder_10mm_2pct_error.csv  (+17 more)
tests/: analyze_composite_failures.py  analyze_diameter_performance.py  diagnose_sphere_cap.py  generate_comprehensive_tests.py  generate_test_data.py  run_comprehensive_assessment.py  run_comprehensive_medium_confidence.py  run_comprehensive_with_phase2.py  run_phase2_medium_confidence.py  test_boundary_detection.py  test_geometry_combinations.py  test_selective_routing.py  update_ifu_metrics.py  (+4 more)
(+16 files in other folders)
