# Container Geometry Analyzer - Modern Python Project Configuration
# ===================================================================
# PEP 517/518 compliant build system configuration

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "container-geometry-analyzer"
version = "3.11.8"
description = "Analyze container geometry from volume-height data and generate 3D models"
readme = "README.md"
authors = [
    {name = "Marco Horstmann"},
]
license = {text = "MIT"}  # Update when LICENSE file is added
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
keywords = ["geometry", "analysis", "container", "3d-modeling", "stl", "pdf", "scientific"]

dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0",
    "reportlab>=3.6.0",
    "trimesh>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "pytest-xdist>=2.5.0",
    "pytest-benchmark>=3.4.1",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
    "pylint>=2.12.0",
    "mypy>=0.950",
    "sphinx>=4.5.0",
    "sphinx-rtd-theme>=1.0.0",
    "ipython>=8.0.0",
    "jupyter>=1.0.0",
    "pre-commit>=2.17.0",
    "build>=0.7.0",
    "twine>=3.8.0",
]

[project.scripts]
container-analyzer = "container_geometry_analyzer_gui_v3_11_8:main"

[project.urls]
Homepage = "https://github.com/yourusername/container-geometry-analyzer"
Documentation = "https://github.com/yourusername/container-geometry-analyzer/blob/main/README.md"
Repository = "https://github.com/yourusername/container-geometry-analyzer"
"Bug Tracker" = "https://github.com/yourusername/container-geometry-analyzer/issues"

# Tool configurations
# ===================

[tool.black]
line-length = 100
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.eggs
  | build
  | dist
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = [".", "tests"]
python_files = ["test_*.py", "*_test.py", "benchmark_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--strict-markers",
    "--tb=short",
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "benchmark: marks tests as benchmarks",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/*_test.py",
    "*/benchmark_*.py",
    "*/visualize_*.py",
    "setup.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Set to true for strict mode
ignore_missing_imports = true
show_error_codes = true
show_column_numbers = true
pretty = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "R0913",  # too-many-arguments
    "R0914",  # too-many-locals
]

[tool.pylint.format]
max-line-length = 100
